# dataset_analyzer

./: .gitignore  README.md  app.py  generate_test_data.py  pyproject.toml  requirements.txt  test_persistence.py
core/: data_manager.py  io_yolo.py  io_yolo_optimized.py  metrics.py
mock/gt_labels/: plate_jkl345.txt
mock/predictions_run_1/: plate_abc123.txt  plate_def456.txt  plate_ghi012.txt  plate_jkl345.txt  plate_xyz789.txt
mock/predictions_run_2/: plate_abc123.txt  plate_def456.txt  plate_ghi012.txt  plate_jkl345.txt  plate_xyz789.txt
mock/predictions_run_3/: plate_ghi012.txt  plate_jkl345.txt
mock/training_run_1/: train_sample_003.txt  train_sample_004.txt  train_sample_005.txt
mock/training_run_2/: train_sample_001.txt  train_sample_006.txt
mock/training_run_3/: train_sample_002.txt  train_sample_007.txt
tests/: test_metrics.py
ui_pages/: add_run.py  gt.py  trends.py
