[project]
name = "dataset-analyzer"
version = "0.1.0"
description = "YOLO11 License Plate Character Recognition Dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.39.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.24.0",
    "rapidfuzz>=3.10.0",
    "altair>=5.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
